kubernetes/orion/manifests/infra/actions-runner/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: actions-runner
  labels:
    pod-security.kubernetes.io/enforce: baseline
